# pipeline-pro

./: .replit  README.md  ecosystem.config.cjs  ecosystem.config.js  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
attached_assets/: Attribute_mapping_1781604045376.docx  Attributes_1780310861640.docx  Categories_mapping_and_rules_(2)_1780565222013.docx  Mapping_step_1780310861643.docx  Pasted--File-home-dev-public-html-venv-lib-python3-13-site-pac_1776416587787.txt  Pasted--Live-6-25-11-AM-info-Scoped-upload-119-process-118-fet_1777358379053.txt  Pasted--Your-task-is-to-UPGRADE-and-REFACTOR-the-current-syste_1779094889237.txt  Pasted--curl-X-POST-http-localhost-8000-api-stores-2-test-prod_1776419309492.txt  Pasted--result-success-data-gmtModified-11-20-2025-21-30-47-co_1777282276378.txt  Pasted-0-pipeline-api-ERROR-Exception-in-ASGI-application-0-pi_1784184602992.txt  Pasted-D-woocommerce-auotmation-project-pipeline-pro-node-modu_1775209805804.txt  Pasted-EDA003973501E-title-logic-fallback-404-models-gemini-1-_1779182765000.txt  Pasted-Error-Cannot-find-module-rollup-rollup-win32-x64-msvc-n_1775206146883.txt  Pasted-Update-my-existing-project-to-address-the-following-cli_1776936239551.txt  Pasted-We-already-have-an-existing-FastAPI-Celery-AI-pipeline-_1779094816138.txt  Pasted-We-have-to-had-attributes-in-Woo-otherwise-we-need-to-b_1782120644123.txt  Pasted-We-need-to-refactor-the-pipeline-system-to-support-mult_1777882466661.txt  Pasted-You-are-working-on-an-existing-full-stack-project-FastA_1777537032707.txt  PipelinePro_UI_Demo_-_Shortcut_1784533731635.lnk  (+5 more)
(+119 files in other folders)
